fix (Xu Ly Don) : bo sung xu ly don khi chuyen don va fix vai tro lanh dao
bo sung xu ly don khi chuyen don va fix vao tro lanh dao

see #119